# GEngineCpp

./: CMakeLists.txt  README.md
.github/workflows/: build-cmake-multi-platform.yml  cmake-multi-platform.yml
src/: Engine.cpp  Engine.h  TestFile.cpp  TestFile.h
src/Bootstraps/: GEngineBootstrap.cpp  GEngineBootstrap.h
src/Contexts/Data/Enums/: MaterialResourceType.h  ResourceOriginType.h  ResourceType.h
src/Contexts/Data/Modules/: DataModule.cpp  DataModule.h
src/Contexts/Data/ResourceOrigin/: ChildResourceOrigin.cpp  ChildResourceOrigin.h  CopyResourceOrigin.cpp  CopyResourceOrigin.h  FileSystemResourceOrigin.cpp  FileSystemResourceOrigin.h  InternalResourceOrigin.cpp  InternalResourceOrigin.h  ResourceOrigin.cpp  ResourceOrigin.h
src/Contexts/Data/Resources/: MaterialResource.cpp  MaterialResource.h  MeshResource.cpp  MeshResource.h  ModelResource.cpp  ModelResource.h  Resource.cpp  Resource.h  ShaderResource.cpp  ShaderResource.h  StandardMaterialResource.cpp  StandardMaterialResource.h  TextureResource.cpp  TextureResource.h
src/Contexts/Ecs/Components/: Component.h
src/Contexts/Ecs/Constants/: ComponentsConstants.h
src/Contexts/Ecs/Entities/: AxisRenderer3D.cpp  AxisRenderer3D.h  BoxPrimitiveRenderer3D.cpp  BoxPrimitiveRenderer3D.h  DirectionalLight3D.cpp  DirectionalLight3D.h  Entity.cpp  Entity.h  Entity.tpp  Entity3D.cpp  Entity3D.h  Light3D.cpp  Light3D.h  MeshRenderer3D.cpp  MeshRenderer3D.h  MeshResourceRenderer3D.cpp  MeshResourceRenderer3D.h  PrimitiveRenderer3D.cpp  PrimitiveRenderer3D.h
src/Contexts/Ecs/Enums/: ComponentType.h  EntityType.h
src/Contexts/Ecs/Modules/: EcsModule.cpp  EcsModule.h  EcsModule.tpp
src/Contexts/Game/Games/: Game.cpp  Game.h
src/Contexts/Game/Modules/: GameModule.cpp  GameModule.h
src/Contexts/General/: Module.h
src/Contexts/General/Modules/: Module.cpp  Module.h
src/Contexts/General/RenderQueue/: DrawCall.cpp  DrawCall.h  RenderQueue.cpp  RenderQueue.h
src/Contexts/Renderer3D/Enums/: BaseShaderUniformLocations.h  Light3DType.h
src/Contexts/Renderer3D/Lights/: Light3D.cpp  Light3D.h
src/Contexts/Renderer3D/Modules/: Renderer3DModule.cpp  Renderer3DModule.h
src/Contexts/Renderer3D/RenderQueue/: DrawCall.cpp  DrawCall.h  RenderQueue3D.cpp  RenderQueue3D.h
src/Contexts/Window/Modules/: WindowModule.cpp  WindowModule.h
src/Core/: Engine.cpp  Engine.h
src/Utils/Events/: Event.h
src/Utils/Extensions/: MapExtensions.cpp  MapExtensions.h  MapExtensions.tpp  MathExtensions.cpp  MathExtensions.h
